Link entre as páginas html e design.

--- a/WebContent/igor.html
+++ b/WebContent/igor.html
@@ -2,9 +2,52 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Igor</title>
+<title>Cadastros</title>
+
+<style>
+
+html {
+	position:relative;
+	margin: 0px;
+	padding: 0px;
+	border: none;
+	}
+
+.menu {
+	position: absolute;
+	width: 300px;
+	}
+a {
+	text-decoration: none;
+	display: block;
+	width: 300px;
+	height: 38px;
+	border: 3px solid black;
+	font-size: 24px;
+	border-radius: 10px;
+	padding: 6px;
+}
+a:hover {
+	background-color: lightgray;
+	font-size: 27px;
+	}
+a:visited, :link {
+	color: black;
+}
+
+
+</style>
 </head>
 <body>
-
+<header>
+<h1><a href="index.html">..... Imgaem menu principal </a></h1>
+<h1>Cadastrar novos recursos</h1>
+</header>
+<div class="menu">
+	<a href="carta.html">Cadastro de cartas</a>
+	<a href="tipo.html">Cadastro de tipos de cartas </a>
+	<a href=""> Novos Cadastros </a>
+	<a href=""> Novos Cadastros 2 </a>
+<div>
 </body>
 </html>
