--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -5,6 +5,9 @@
 <title>N1B2</title>
 </head>
 <body>
-	<h1>N1B2</h1>
+	<h1>Yugioh - Card Game</h1>
+		<a href="tipo.html">Cadastro de tipos</a>
+		<a href="carta.html">Cadastro de cartas</a>
+	
 </body>
 </html>
