--- a/WebContent/igor.html
+++ b/WebContent/igor.html
@@ -40,14 +40,15 @@ a:visited, :link {
 </head>
 <body>
 <header>
-<h1><a href="index.html">..... Imgaem menu principal </a></h1>
+<h1><a href="index.html">..... Imagem menu principal </a></h1>
 <h1>Cadastrar novos recursos</h1>
 </header>
 <div class="menu">
 	<a href="carta.html">Cadastro de cartas</a>
 	<a href="tipo.html">Cadastro de tipos de cartas </a>
-	<a href=""> Novos Cadastros </a>
+	<a href="jogadores.html"> Cadastro de Jogadores</a>
 	<a href=""> Novos Cadastros 2 </a>
-<div>
+</div>
+
 </body>
 </html>
