Modificação HTML e controles

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -2,12 +2,53 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>N1B2</title>
+<title>Cadastros</title>
+
+<style>
+
+html {
+	position:relative;
+	margin: 0px;
+	padding: 0px;
+	border: none;
+	}
+
+.menu {
+	position: absolute;
+	width: 300px;
+	}
+a {
+	text-decoration: none;
+	display: block;
+	width: 300px;
+	height: 38px;
+	border: 3px solid black;
+	font-size: 24px;
+	border-radius: 10px;
+	padding: 6px;
+}
+a:hover {
+	background-color: lightgray;
+	font-size: 27px;
+	}
+a:visited, :link {
+	color: black;
+}
+
+
+</style>
 </head>
 <body>
-	<h1>Yugioh - Card Game</h1>
-		<a href="tipo.html">Cadastro de tipos</a>
-		<a href="carta.html">Cadastro de cartas</a>
-	
+<header>
+<h1><a href="index.html">..... Imagem menu principal </a></h1>
+<h1>Cadastrar novos recursos</h1>
+</header>
+<div class="menu">
+	<a href="carta.html">Cadastro de cartas</a>
+	<a href="tipo.html">Cadastro de tipos de cartas </a>
+	<a href="jogadores.html"> Cadastro de Jogadores</a>
+	<a href=""> Novos Cadastros 2 </a>
+</div>
+
 </body>
 </html>
