--- a/WebContent/jogadores.html
+++ b/WebContent/jogadores.html
@@ -35,7 +35,6 @@ a:visited, :link {
 	color: black;
 }
 
-
 </style>
 </head>
 <body>
@@ -49,6 +48,23 @@ a:visited, :link {
 	<a href="jogadores.html"> Cadastro de Jogadores</a>
 	<a href=""> Novos Cadastros 2 </a>
 </div>
-
+<form >
+	<canvas id="image"> </canvas>
+	<input type="text" id="codigo" style="display:none">
+	<span>NOME</span><input type="text" id="nome">
+	<span>APELIDO</span><input type="text" id="apelido">
+	<span>CPF</span><input type="text" id="cpf">
+	<span>NACIONALIDADE</span>
+	<select id="nacionalidade">
+		<option value="br">BRASIL</option>
+		<option value="can">CANADÁ</option>
+		<option value="eua">ESTADOS UNIDOS</option>
+		<option value="fra">FRANÇA</option>
+		<option value="jpn">JAPAO</option>
+		<option value="can">CANADÁ</option>
+		<option value="chi">CHINA</option>
+		<option value="aus">AUSTRALIA</option>
+	</select>
+</form>
 </body>
 </html>
