Imagem to base 64

--- a/WebContent/jogadores.html
+++ b/WebContent/jogadores.html
@@ -7,6 +7,9 @@
 <style>
 
 html {
+<style>
+
+html {
 	position:relative;
 	margin: 0px;
 	padding: 0px;
@@ -35,6 +38,8 @@ a:visited, :link {
 	color: black;
 }
 
+
+</style>
 </style>
 </head>
 <body>
